# covid19

./: .gitignore  README.md  covid19.py  pyproject.toml
predictions/: 2020-03-18-02.txt  2020-03-18.txt  2020-03-19.txt
src/covid19/: __init__.py  data.py  populations.py  simple.py  simulation.py
src/covid19/cli/: __init__.py  animate.py  data.py  list.py  main.py  options.py  plot.py  rates.py  simulate.py  utils.py
src/covid19/data/: __init__.py  api.py  jhu.py  populations.py  rki.py  rki_arcgis.py
