[tool.poetry]
name = "covid19"
version = "0.1.0"
description = "covid-19 analysis"
authors = ["Claudio Jolowicz <claudio.jolowicz@cyren.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
covid19 = "covid19:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
