[tool.poetry]
name = "covid19"
version = "0.1.0"
description = "covid-19 analysis"
authors = ["Claudio Jolowicz <claudio.jolowicz@cyren.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.1"
more-itertools = "^8.2.0"
tabulate = "^0.8.6"
humanize = "^2.0.0"
matplotlib = "^3.2.1"
dateparser = "^0.7.4"
imageio = "^2.8.0"
requests = "^2.23.0"
desert = "^2020.1.6"
appdirs = "^1.4.3"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
covid19 = "covid19.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
